fixed spacing issue in footer

--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@ body {
     gap: 1.6rem;
     display: none; /* still toggled */
     align-items: center;
+    justify-content: start;
     padding: 1rem;
     background-color: transparent;
     box-shadow: none;
